--- a/Yatzi/views/login.pug
+++ b/Yatzi/views/login.pug
@@ -1,5 +1,6 @@
+h1 Opret Bruger 
 form(action="/", method="post")
     label username: 
     input(type="text", username='username')
-    input(type="text", password='password')
-    button(type="submit") Login 
+    button(type="submit") Opret 
+    
