--- a/Yatzi/views/forside.pug
+++ b/Yatzi/views/forside.pug
@@ -2,4 +2,5 @@ html
     head 
         title forside 
     body 
-        p hej team 
+        h1 Deltagere 
+        include /includes/spiller.pug 
