Lavet lidt på app, spilside og login

--- a/Yatzi/views/login.pug
+++ b/Yatzi/views/login.pug
@@ -1,5 +1,5 @@
 h1 Opret Bruger 
-form(action="/", method="post")
+form(action="/spilSide", method="post")
     label username: 
     input(type="text", username='username')
     button(type="submit") Opret 
