--- a/Yatzi/views/forside.pug
+++ b/Yatzi/views/forside.pug
@@ -3,5 +3,6 @@ html
         title forside 
     body 
         h1 Deltagere:
-        include login.pug
+        include /includes/spiller.pug
+        include /includes/login.pug
 
