--- a/Yatzi/views/includes/login.pug
+++ b/Yatzi/views/includes/login.pug
@@ -1,5 +1,5 @@
 h1 Opret Bruger 
-form(action="/", method="post")
+form(action="/:spiller", method="post")
     label username: 
     input(type="text", username='username')
     button(type="submit") Opret 
