--- a/Yatzi/views/includes/login.pug
+++ b/Yatzi/views/includes/login.pug
@@ -1,6 +1,6 @@
 h1 Opret Bruger 
-form(action="/spilSide", method="post")
+form(action="/", method="post")
     label username: 
-    input(type="text", username='username')
+    input(type="text", name='spiller')
     button(type="submit") Opret 
     
