--- a/Yatzi/views/forside.pug
+++ b/Yatzi/views/forside.pug
@@ -5,4 +5,6 @@ html
         h1 Deltagere:
         include includes/spiller.pug
         include includes/login.pug
+        form(action="/spilside", method="get")
+            button(type="submit") Start 
 
