--- a/Yatzi/views/includes/spiller.pug
+++ b/Yatzi/views/includes/spiller.pug
@@ -1,4 +1,6 @@
-ul 
-    each spiller in spillere
-        li= spiller
+h1 Deltagere:
+    h3
+        ul 
+            each spiller in spillere
+                li= spiller
 
