--- a/Yatzi/views/spilSide.pug
+++ b/Yatzi/views/spilSide.pug
@@ -23,6 +23,8 @@ html
             #rolls
                 label#TurnLabel Turn:
                 button#rollButton Roll
+        #spiller-container
+            include includes/spiller.pug
         #Point-Container
             #PointLabel-Container
                 label 1-s
