--- a/Yatzi/views/includes/spiller.pug
+++ b/Yatzi/views/includes/spiller.pug
@@ -2,5 +2,6 @@ h1 Deltagere:
     h3
         ul 
             each spiller in spillere
-                li= spiller
+                li(class="")= spiller
+                
 
