--- a/Yatzi/views/spilSide.pug
+++ b/Yatzi/views/spilSide.pug
@@ -57,11 +57,11 @@ html
                 input#Bonus(
                     type="text" 
                     name="Bonus" 
-                    disabled=true 
+                     
                     placeholder="50")
                 #Total
                     label Total:
-                    input#Total(
+                    input#Totalinput(
                         type="text" 
                         name="Total" 
                         value= currentPlayer.score) 
